--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
+  flutter_hooks: ^0.18.5+1
 
 dev_dependencies:
   bloc_test: ^9.1.0
